<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.cidtepole.tcpclientbridge.MainActivity">

     <item android:id="@+id/action_run"
         android:title=""
         android:orderInCategory="2"
         android:icon="@drawable/ic_desconectado"
         app:showAsAction="always" />


     <item android:id="@+id/action_servers"  android:title=""
         android:orderInCategory="1" android:icon="@drawable/ic_server" app:showAsAction="always" />

     <item
         android:id="@+id/action_more"
         android:icon="@drawable/ic_more_vert"
         android:title=""
         android:orderInCategory="3"
         app:showAsAction="always">
          <menu>
               <item android:id="@+id/action_settings" android:title="@string/action_settings"
                   android:orderInCategory="1"   android:icon="@drawable/ic_settings" app:showAsAction="never" />

               <item android:id="@+id/action_delete_summ" android:title="@string/action_delete_summ"
                   android:orderInCategory="3"  android:icon="@drawable/ic_clear_all" app:showAsAction="never" />

               <item android:id="@+id/action_delete_term" android:title="@string/action_delete_term"
                   android:orderInCategory="3"  android:icon="@drawable/ic_clear_all" app:showAsAction="never" />

               <item android:id="@+id/action_send_logFile_summ" android:title="@string/action_send_logFile_summ"
                   android:orderInCategory="3"  android:icon="@drawable/ic_share" app:showAsAction="never" />

               <item android:id="@+id/action_send_logFile_term" android:title="@string/action_send_logFile_term"
                   android:orderInCategory="3"  android:icon="@drawable/ic_share" app:showAsAction="never" />

               <item android:id="@+id/action_show_ip" android:title="@string/action_show_ip"
                   android:orderInCategory="4" android:icon="@drawable/ic_cloudy" app:showAsAction="never" />

               <item android:id="@+id/action_contact" android:title="@string/contact"
                   android:orderInCategory="5"   android:icon="@drawable/ic_contact_mail" app:showAsAction="never" />

               <item android:id="@+id/action_help" android:title="@string/action_help"
                   android:orderInCategory="6" android:icon="@drawable/ic_help" app:showAsAction="never" />

          </menu>
     </item>


</menu>
